nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
    - name: nginx-frontend
      image: nginx:latest
      imagePullPolicy: IfNotPresent
      volumeMounts:
      - mountPath: "/var/www/html"
        name: nginx-pv
  volumes:
    - name: nginx-pv
      persistentVolumeClaim:
        claimName: nginx-pvc
