hellopy-deployment-v1.2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellopy-deployment
spec:
  selector:
    matchLabels:
      app: hellopy
  replicas: 2 
  template:
    metadata:
      labels:
        app: hellopy
    spec:
      containers:
      - name: hellopy
        image: docker.ted.mighty/hellopy:latest
        ports:
        - containerPort: 8000 
---
apiVersion: v1
kind: Service
metadata:
  name: hellopy
spec:
  #type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: hellopy
