hellopy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellopy-deployment
spec:
  selector:
    matchLabels:
      app: hellopy
  replicas: 1 
  template:
    metadata:
      labels:
        app: hellopy
    spec:
      containers:
      - name: hellopy
        image: docker.cetcxl.local/hellopy:1.6
        imagePullPolicy: Always
        #env:
        #- name: REDIS_HOST
        #  # "svc.cluster.local": Local k8s cluster service
        #  # "data.": data namespace
        #  # "redis": Redis service name
        #  value: "redis.data.svc.cluster.local"
        #- name: REDIS_PASS
        #  value: "P@ssw0rd"
        ports:
          - containerPort: 8000 
      imagePullSecrets:
        - name: docker-cetcxl-local
---
apiVersion: v1
kind: Service
metadata:
  name: hellopy-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: hellopy # SHOULD BE same as pod label
